--- a/assets/bower.json
+++ b/assets/bower.json
@@ -24,6 +24,7 @@
     "paper-fab": "PolymerElements/paper-fab#^1.2.1",
     "paper-menu": "PolymerElements/paper-menu#^1.2.2",
     "paper-menu-button": "PolymerElements/paper-menu-button#^1.5.2",
-    "paper-item": "PolymerElements/paper-item#^1.2.1"
+    "paper-item": "PolymerElements/paper-item#^1.2.1",
+    "font-awesome": "^4.7.0"
   }
 }
